--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="column">
     <div class="container">
-        <img src="images/draft.gif" class="image">
+        <img src="images/purple.gif" class="image">
         <div class="overlay">
             <!--1950s-->
             <div class="text">Computers and the workers who operate them are believed to become vital to the state.</div>
