--- a/Winter_Popup/index.html
+++ b/Winter_Popup/index.html
@@ -34,11 +34,11 @@
 
         <!--second slide-->
         <div class="carousel-item">
-         <img src="images/draft.gif" alt="Second slide">
+         <img src="images/purple.gif" alt="Second slide">
          <div class="carousel-caption d-none d-md-block">
           <div class="container">
           <h2>1950s</h2>
-            <p>50% of computer scientists are women.</p>
+            <p>Computers and the workers who operate them are believed to become vital to the state.</p>
         </div>
         </div>
         </div>
@@ -48,8 +48,30 @@
         <img src="images/draft.gif" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
           <div class="container">
+         <h2>1960s</h2>
+         <p>Computers become a symbol of industrial and social modernity.<br>
+          Employers expect young men to become experts in computer technology to save the economy.  </p>
+        </div>
+       </div>
+       </div>
+
+       <div class="carousel-item">
+        <img src="images/draft.gif" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <div class="container">
          <h2>1970s</h2>
-         <p>9% of computer scientists are women.</p>
+         <p>Women’s representation in computing drops to 9%. </p>
+        </div>
+       </div>
+       </div>
+
+       <div class="carousel-item">
+        <img src="images/draft.gif" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <div class="container">
+         <h2>2024</h2>
+         <p>Governments attempt to push girls and women into computing, expecting it to fix the gender imbalances. <br>
+          But the initiative to get girls, women, and people of color to train for STEM jobs cannot undo the underlying structures of power. </p>
         </div>
        </div>
        </div>
