--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -39,7 +39,7 @@
       <!--1940s-->
         <div class="carousel-item active">
             <div class="gif-container">
-                <img src="images/draft.gif" alt="1940s">
+                <img src="images/1940s.gif" alt="1940s">
             </div>
             <div class="text-container">
                 <p>In the 1940s, the term "computer" referred to the predominantly female workforce engaged in computational tasks, 
