pause button first draft

--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -24,7 +24,13 @@
           </div>
           
             <div class="gif-container">
-                <img src="images/1940s.gif" alt="1940s">
+                <img src="images/1940s-still.png" alt="1940s" loading="lazy">
+                <details open>
+                  <summary role="button" aria-label="static image"></summary>
+                  <div class="object-and-details1">
+                    <img src="images/1940s.gif" alt="1940s" loading="lazy">
+                  </div>
+                </details>
             </div>
             <div class="text-container">
                 <p>In the 1940s, the term "computer" referred to the predominantly female workforce engaged in computational tasks, 
@@ -38,9 +44,18 @@
 
         <!--1950s-->
         <div class="carousel-item">
-          <div class="gif-container">
-              <img src="images/draft.gif" alt="1950s">
+          <div class="heading">
+            <h1>1950s</h1>
           </div>
+          <div class="gif-container">
+            <img src="images/dream1.gif" alt="1950s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/draft.gif" alt="1950s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
               <p>As computing began to professionalize in the 1950s with the advent of machines like ENIAC and UNIVAC, 
                 which were initially programmed by women, perceptions of computing shifted from manual, 
@@ -52,6 +67,9 @@
 
         <!--1960s-->
         <div class="carousel-item">
+          <div class="heading">
+            <h1>1960s</h1>
+          </div>
           <div class="gif-container">
               <img src="images/draft.gif" alt="1960s">
           </div>
@@ -65,6 +83,9 @@
 
         <!--1970s-->
         <div class="carousel-item">
+          <div class="heading">
+            <h1>1970s</h1>
+          </div>
           <div class="gif-container">
               <img src="images/draft.gif" alt="1970s">
           </div>
@@ -79,6 +100,9 @@
 
         <!--1980s-->
         <div class="carousel-item">
+          <div class="heading">
+            <h1>1980s</h1>
+          </div>
           <div class="gif-container">
               <img src="images/draft.gif" alt="1980s">
           </div>
@@ -93,6 +117,9 @@
 
         <!--1990s-->
         <div class="carousel-item">
+          <div class="heading">
+            <h1>1990s</h1>
+          </div>
           <div class="gif-container">
               <img src="images/draft.gif" alt="1990s">
           </div>
@@ -109,6 +136,9 @@
 
         <!--2000s-->
         <div class="carousel-item">
+          <div class="heading">
+            <h1>2000s</h1>
+          </div>
           <div class="gif-container">
               <img src="images/draft.gif" alt="2000s">
           </div>
@@ -125,6 +155,9 @@
 
         <!--2010s-->
         <div class="carousel-item">
+          <div class="heading">
+            <h1>2010s</h1>
+          </div>
           <div class="gif-container">
               <img src="images/draft.gif" alt="2010s">
           </div>
@@ -144,6 +177,9 @@
 
         <!--2020 - 2023-->
         <div class="carousel-item">
+          <div class="heading">
+            <h1>2020 - 2023</h1>
+          </div>
           <div class="gif-container">
               <img src="images/draft.gif" alt="2020-2023">
           </div>
