adding images and title page

--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -25,12 +25,32 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
     </ol>
     <div class="carousel-inner">
 
+      <!--title page-->
+      <div class="carousel-item active">
+      <div class="title_page_container">
+        <div class="heading">
+          <h1>Changing Perspectives</h1>
+        </div>
+        <div class="title_image">
+          <img src="images/key_image.png" alt="Changing Perspectives Image" width="500">
+        </div>
+        <div class="names">
+          Created by Angela Bernabeo and Jessica Lian
+        </div>
+        <div class="exhibition">
+          Featured in the Pairing Pairs exhibition in the <a href="https://www.newmediartspace.info/" target="_blank">New Media Artspace</a>
+        </div>
+      </div>
+    </div>
+
+
       <!--1940s-->
       
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <div class="heading">
             <h1>1940s</h1>
           </div>
@@ -60,11 +80,11 @@
             <h1>1950s</h1>
           </div>
           <div class="gif-container">
-            <img src="images/dream1.gif" alt="1950s" loading="lazy">
+            <img src="images/1950s-still.png" alt="1950s" loading="lazy">
             <details open>
               <summary role="button" aria-label="static image"></summary>
               <div class="object-and-details1">
-                <img src="images/draft.gif" alt="1950s" loading="lazy">
+                <img src="images/1950s.gif" alt="1950s" loading="lazy">
               </div>
             </details>
         </div>
@@ -83,8 +103,14 @@
             <h1>1960s</h1>
           </div>
           <div class="gif-container">
-              <img src="images/draft.gif" alt="1960s">
-          </div>
+            <img src="images/1960s-still.png" alt="1960s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/1960s.gif" alt="1960s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
               <p>The space race of the 1960s further advanced computing technology, associating computers with industrial and social modernity. 
                 This period began to subtly push expectations toward young men to become the new experts in computer technology, particularly in roles like 
@@ -99,8 +125,14 @@
             <h1>1970s</h1>
           </div>
           <div class="gif-container">
-              <img src="images/draft.gif" alt="1970s">
-          </div>
+            <img src="images/1970s-still.png" alt="1970s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/1970s.gif" alt="1970s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
               <p>With the introduction of personal computers and GUIs in the 1970s, computing expanded into various industries, 
                 marking the beginning of significant technological shifts. This decade saw the professionalization of computing, which, 
@@ -116,8 +148,14 @@
             <h1>1980s</h1>
           </div>
           <div class="gif-container">
-              <img src="images/draft.gif" alt="1980s">
-          </div>
+            <img src="images/1980s-still.png" alt="1980s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/1980s.gif" alt="1980s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
               <p>The personal computer revolution of the 1980s profoundly impacted gender dynamics within computing. 
                 The marketing of personal computers as tools for boys, coupled with cultural portrayals of computer geeks as predominantly male, 
@@ -133,8 +171,14 @@
             <h1>1990s</h1>
           </div>
           <div class="gif-container">
-              <img src="images/draft.gif" alt="1990s">
-          </div>
+            <img src="images/1990s-still.png" alt="1990s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/1990s.gif" alt="1990s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
               <p>The 1990s witnessed significant technological advances, including the rise of the internet and the 
                 proliferation of personal computing, which transformed the landscape of computer science. As the tech industry boomed,
@@ -152,8 +196,14 @@
             <h1>2000s</h1>
           </div>
           <div class="gif-container">
-              <img src="images/draft.gif" alt="2000s">
-          </div>
+            <img src="images/2000s-still.png" alt="2000s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/2000s.gif" alt="2000s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
               <p>The 2000s saw the internet becoming ubiquitous, and digital technologies becoming integral to daily life and work, 
                 further emphasizing the importance of computing skills. This era brought a heightened awareness of the gender gap in STEM fields, 
@@ -171,8 +221,14 @@
             <h1>2010s</h1>
           </div>
           <div class="gif-container">
-              <img src="images/draft.gif" alt="2010s">
-          </div>
+            <img src="images/2010s-still.png" alt="2010s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/2010s.gif" alt="2010s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
               <p>The 2010s marked a period of intense technological innovation, with advancements in artificial intelligence, 
                 machine learning, and big data reshaping the future of work and society. Amidst this backdrop, there was a renewed emphasis on 
