--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -249,20 +249,20 @@
             <h1>2020 - 2023</h1>
           </div>
           <div class="gif-container">
-              <img src="images/draft.gif" alt="2020-2023">
-          </div>
+            <img src="images/2020s-still.png" alt="2020s" loading="lazy">
+            <details open>
+              <summary role="button" aria-label="static image"></summary>
+              <div class="object-and-details1">
+                <img src="images/2020s.gif" alt="2020s" loading="lazy">
+              </div>
+            </details>
+        </div>
           <div class="text-container">
-              <p>The beginning of the 2020s brought significant advances in cloud computing, artificial intelligence (AI), 
-                and the Internet of Things (IoT), mirroring the transformative tech changes of previous decades. 
-                This era, however, was uniquely shaped by the global COVID-19 pandemic, which accelerated the adoption of digital and remote technologies, 
-                highlighting the critical role of connectivity in modern life. Amid these advancements, the tech industry faced renewed scrutiny over its 
-                historical gaps in diversity and inclusion. Efforts to increase representation among women and people of color in tech gained new momentum, 
-                echoing the early and pivotal contributions of women in the 1940s who were central to computing's origins. This period emphasized the 
-                importance of drawing lessons from past efforts to address gender and racial disparities in the field. Initiatives aimed at fostering 
-                inclusive cultures and dismantling systemic barriers to entry and advancement in STEM careers became more pronounced. While these efforts 
-                marked steps toward correcting long-standing inequities, the continued underrepresentation in tech roles, especially in leadership, 
-                highlighted the need for ongoing action. The push for diversity and inclusion in the 2020s, against a backdrop of rapid technological evolution, 
-                reflects a crucial lesson from computing history: innovation achieves its greatest potential when it is fueled by a wide range of perspectives.
+              <p>The early 2020s saw leaps in cloud computing, AI, and IoT, echoing past tech revolutions. 
+                Yet, the era was defined by COVID-19, hastening digital adoption and reinforcing connectivity's importance. 
+                Amid progress, the tech sector faced scrutiny for diversity gaps. Efforts to boost women and minority representation gained momentum, 
+                echoing past contributions. Lessons from history fueled initiatives to foster inclusive cultures and dismantle barriers in STEM. 
+                While some progress was made, underrepresentation among women and people of color persists. 
               </p>
           </div>
       </div>
