--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -230,15 +230,10 @@
             </details>
         </div>
           <div class="text-container">
-              <p>The 2010s marked a period of intense technological innovation, with advancements in artificial intelligence, 
-                machine learning, and big data reshaping the future of work and society. Amidst this backdrop, there was a renewed emphasis on 
-                diversity and inclusion in the tech industry and academia. High-profile campaigns and corporate diversity initiatives sought to 
-                create more welcoming environments and encourage participation among underrepresented groups in STEM fields, including women. 
-                Governments and educational institutions doubled down on efforts to address gender imbalances, integrating coding and computational 
-                thinking into earlier stages of education and promoting STEM careers among girls and women. Despite these initiatives, challenges persisted, 
-                underscoring the complexity of dismantling underlying structures of power and exclusion. The decade's technological advancements highlighted 
-                the critical need for diverse perspectives in shaping the future of technology and innovation, making the push for gender equality in 
-                computer science more urgent than ever.
+              <p>The 2010s saw rapid tech innovation in AI, machine learning, and big data, transforming work and society. 
+                There was a focus on diversity and inclusion in tech and academia, with campaigns promoting participation of underrepresented groups, 
+                especially women, in STEM. Despite efforts, challenges remained in addressing power structures and exclusion. 
+                Tech advancement underscored the importance of diverse perspectives, emphasizing the urgency of gender equality in computer science.
               </p>
           </div>
       </div> 
