--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -201,7 +201,7 @@
             <details open>
               <summary role="button" aria-label="static image"></summary>
               <div class="object-and-details1">
-                <img src="images/2000s.gif" alt="2000s" loading="lazy">
+                <img src="images/2000s.GIF" alt="2000s" loading="lazy">
               </div>
             </details>
         </div>
