paring pairs typo

--- a/Changing_Perspectives/index.html
+++ b/Changing_Perspectives/index.html
@@ -43,7 +43,7 @@
           Created by Angela Bernabeo and Jessica Lian
         </div>
         <div class="exhibition">
-          Featured in the Pairing Pairs exhibition in the <a href="https://www.newmediartspace.info/" target="_blank">New Media Artspace</a>
+          Featured in the Paring Pairs exhibition in the <a href="https://www.newmediartspace.info/" target="_blank">New Media Artspace</a>
         </div>
       </div>
     </div>
